objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Attendee_Confirmation_Date__c</fullName>
        <label>Attendee Confirmation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Targeted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_per_Person__c</fullName>
        <label>Cost per Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dress_Code__c</fullName>
        <label>Dress Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Actual_Cost__c</fullName>
        <label>Event Actual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Expected_Revenue__c</fullName>
        <label>Event Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Service_Style__c</fullName>
        <label>Food Service Style</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Cocktail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign_Event_Code__c</fullName>
        <externalId>true</externalId>
        <label>Lead/Campaign/Event Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_Targeted_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Targeted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer_Registered__c</fullName>
        <label>Number of Customer Registered</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Dress_Code__c</fullName>
        <label>Previous Dress Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_End_Date_Time__c</fullName>
        <label>Previous End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Food__c</fullName>
        <label>Previous Food</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Name__c</fullName>
        <label>Previous Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Start_Date_Time__c</fullName>
        <label>Previous Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Venue__c</fullName>
        <label>Previous Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Email_to_Team__c</fullName>
        <label>Sent Email to Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Order_Flag__c</fullName>
        <formula>CASE(Status,
&apos;Planned&apos;,1,
&apos;Active&apos;,2,
&apos;Cancel&apos;,3,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Order Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Strong Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Chain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_All_Loan_Setup__c</fullName>
        <label>Summary : All Loan Setup</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>All Loan Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_App_In__c</fullName>
        <label>Summary : App-In</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>App In</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Approved_Amount__c</fullName>
        <label>Summary : Approved Amount</label>
        <summarizedField>Target_List__c.Approved_Amount__c</summarizedField>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Approved__c</fullName>
        <label>Summary : Approved</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Auto_Closed__c</fullName>
        <label>Summary : Auto Closed</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Auto Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Case_is_Rejected__c</fullName>
        <label>Summary : Case is Rejected</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Case is Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Closed_Lost__c</fullName>
        <label>Summary : Closed Lost</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Create_Write_Up__c</fullName>
        <label>Summary : Create Write Up</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Stock Negotiation</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Done__c</fullName>
        <label>Summary : Done</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Interested__c</fullName>
        <label>Summary : Interested</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Interested, Customer Interested</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Loan_Setup__c</fullName>
        <label>Summary : Loan Setup</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Loan Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_New__c</fullName>
        <label>Summary : New</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Not_Interest_This_Time__c</fullName>
        <label>Summary : Not Interest This Time</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Not Interested This Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Not_Interested__c</fullName>
        <label>Summary : Not Interested</label>
        <summarizedField>Target_List__c.Number_of_Lead__c</summarizedField>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Not interested</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Partial_Loan_Setup__c</fullName>
        <label>Summary : Partial Loan Setup</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Partial Loan Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Setup_Amount__c</fullName>
        <label>Summary : Setup Amount</label>
        <summarizedField>Target_List__c.Setup_Amount__c</summarizedField>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Stock_Negotiation__c</fullName>
        <label>Summary : Stock Negotiation</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Stock Negotiation</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Waiting_for_Credit_Approval__c</fullName>
        <label>Summary : Waiting for Credit Approval</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Credit Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_Waiting_for_Credit_Setup__c</fullName>
        <label>Summary : Waiting for Credit Setup</label>
        <summaryFilterItems>
            <field>Target_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Credit Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Target_List__c.Lead_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Group__c</fullName>
        <label>Target Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead For Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead To Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead To Inform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <picklist>
            <controllingField>Objective__c</controllingField>
            <picklistValues>
                <fullName>Business matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth / Expo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K SME Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade/FX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarRooftop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>Active_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Lead_Campaign</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Campaign</value>
        </filters>
        <label>2. Active Campaign</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
            <group>SME_BIU</group>
            <group>SME_NH</group>
            <group>SME_RM</group>
            <group>SME_Sales_Management</group>
            <group>SME_TM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Lead</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Lead_Campaign</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Lead For Sales,Lead To Do,Lead To Inform</value>
        </filters>
        <label>1. Active Lead</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
            <group>SME_BIU</group>
            <group>SME_NH</group>
            <group>SME_RM</group>
            <group>SME_Sales_Management</group>
            <group>SME_TM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveLeadCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Lead_Campaign_Event_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Lead_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Lead/Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>SME_Admin</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllLeadCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Lead_Campaign_Event_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Lead_Campaign</value>
        </filters>
        <label>All Lead/Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_BIU</group>
            <role>SME_Admin</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_All_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Type_of_Event__c</columns>
        <columns>Venue__c</columns>
        <columns>Dress_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Event,Campaign.SME_Event_Non_Targeted</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3. Active Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
            <group>SME_BIU</group>
            <group>SME_Event</group>
            <group>SME_NH</group>
            <group>SME_RM</group>
            <group>SME_Sales_Management</group>
            <group>SME_TM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_All_Up_Coming_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Type_of_Event__c</columns>
        <columns>Venue__c</columns>
        <columns>Dress_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.SME_Event,Campaign.SME_Event_Non_Targeted</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Start_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>4. All Up Coming Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_AH</group>
            <group>SME_BIU</group>
            <group>SME_Event</group>
            <group>SME_NH</group>
            <group>SME_RM</group>
            <group>SME_TM</group>
            <role>SME_Admin</role>
            <role>SME_Support</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>SME_Event</fullName>
        <active>true</active>
        <description>SME Marketing Event</description>
        <label>SME-Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>SME_Event_Non_Targeted</fullName>
        <active>true</active>
        <description>SME Marketing Event Non-Targeted List</description>
        <label>SME-Event (Non-Targeted)</label>
    </recordTypes>
    <recordTypes>
        <fullName>SME_Lead_Campaign</fullName>
        <active>true</active>
        <description>This record type is using for Lead and Campaign</description>
        <label>SME- Lead / Campaign</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AttendeeConfirmationDate_must_be_earlier</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &quot;SME_Event&quot;,RecordType.DeveloperName = &quot;SME_Event_Non_Targeted&quot;), Attendee_Confirmation_Date__c &gt;  Start_Date_Time__c)</errorConditionFormula>
        <errorDisplayField>Attendee_Confirmation_Date__c</errorDisplayField>
        <errorMessage>Attendee Confirmation Date must be earlier than Event Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Active_and_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SME_Lead_Campaign&apos; &amp;&amp; ISPICKVAL(Status, &apos;Active&apos;) &amp;&amp; (ISBLANK(StartDate) || StartDate &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Start Date should equal less than or equals Today, to active the Campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_Date_Cannot_Less_Than_1_Year</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c -  DATE((YEAR(StartDate) - 1), MONTH(StartDate), DAY(StartDate)) &lt; 0</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date Cannot Backward More Than 1 Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Time_must_be_later</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &quot;SME_Event&quot;,RecordType.DeveloperName = &quot;SME_Event_Non_Targeted&quot;), End_Date_Time__c  &lt;  Start_Date_Time__c)</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>Event End Time must be later than Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_must_be_later_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &quot;SME_Campaign&quot; ,  EndDate   &lt;   StartDate )</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>Lead/Campaign End Date must be later than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Please_select_Reason_for_Cancellation</fullName>
        <active>true</active>
        <description>when Event status is equal to Cancel, Event team need to specify a reason for cancellation.</description>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &quot;SME_Event&quot;,RecordType.DeveloperName = &quot;SME_Event_Non_Targeted&quot;) ,TEXT(Status) = &quot;Cancel&quot;, ISBLANK(Reason_for_Cancellation__c))</errorConditionFormula>
        <errorDisplayField>Reason_for_Cancellation__c</errorDisplayField>
        <errorMessage>Please provide reason for cancellation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Please_select_Reason_for_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &quot;SME_Event&quot;,RecordType.DeveloperName = &quot;SME_Event_Non_Targeted&quot;
)
, ((ISCHANGED(Start_Date_Time__c)||ISCHANGED(End_Date_Time__c)||ISCHANGED(Venue__c))&amp;&amp; ISBLANK(Reason_for_Change__c)))</errorConditionFormula>
        <errorDisplayField>Reason_for_Change__c</errorDisplayField>
        <errorMessage>Please provide reason for change</errorMessage>
    </validationRules>
</CustomObject>